Fix things